--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
 Flask==3.0.2
-Flask-SQLAlchemy==3.1.1
 Flask-JWT-Extended==4.6.0
 Flask-Cors==5.0.1
 python-dotenv==1.0.1
-bcrypt==4.1.2
-psycopg2-binary==2.9.9
+httpx==0.28.1
+gunicorn==23.0.0
