--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.2
 Flask-JWT-Extended==4.6.0
-Flask-Cors==5.0.1
+Flask-Cors==4.0.0
 python-dotenv==1.0.1
-httpx==0.28.1
-gunicorn==23.0.0
+httpx==0.27.0
+gunicorn==21.2.0
+bcrypt==4.1.2
